<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.javadev</groupId>
  <artifactId>nazk-client</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>

  <name>${project.groupId}:${project.artifactId}</name>
  <description>Java client for declarations from the nazk.gov.ua</description>
  <url>https://github.com/javadev/nazk-client</url>

  <developers>
    <developer>
      <id>javadev</id>
      <name>Valentyn Kolesnikov</name>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>The MIT License</name>
      <url>http://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/javadev/nazk-client.git</connection>
    <developerConnection>scm:git:https://github.com/javadev/nazk-client.git</developerConnection>
    <url>https://github.com/javadev/nazk-client</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <underscore-lodash.version>1.15</underscore-lodash.version>
    <junit.version>4.12</junit.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.github.javadev</groupId>
      <artifactId>underscore-lodash</artifactId>
      <version>${underscore-lodash.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <ciManagement>
    <system>Travis CI</system>
    <url>https://travis-ci.org/javadev/nazk-client</url>
  </ciManagement>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/javadev/nazk-client</url>
  </issueManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.19.1</version>
        <configuration>
            <argLine>${argLine} -Xmx4g -XX:MaxPermSize=512m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eluder.coveralls</groupId>
        <artifactId>coveralls-maven-plugin</artifactId>
        <version>2.2.0</version>
        <configuration>
          <repoToken>bJK1SJbmWfgiZlZ0h5ToiSH6leXCCuHTS</repoToken>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.7.7.201606060606</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>default-report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
